# text_3d_graphics

./: .readme.md.un~  Cargo.toml  readme.md
examples/: basic.rs  draw_triangle.rs  lin_alg.rs  line_drawing.rs  obj_loading.rs  rasterize_triangle.rs
src/: lib.rs
src/behaviour/: mod.rs
src/printing/: drawing.rs  mod.rs
src/rasterizing/: mod.rs
src/resources/: mod.rs
