[package]
name = "text_3d_graphics"
version = "0.1.0"
edition = "2021"
description = "Rasterizing 3D graphics into text."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anstyle = "1.0.5"
buildstructor = "*"
crossterm = "0.27.0"
error-stack = "0.4.1"
getset = "0.1.2"
glam = "0.25.0"
itertools = "0.12.1"
rayon = "1.8.1"
thiserror = "1.0.56"
tobj = {version = "4.0.1", features = ["async"]}
tokio = {version = "1.35.1", features = ["full"]}
